<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ViewUniversity_Activity">

    <GridLayout

        android:columnCount="1"
        android:rowCount="8"
        android:alignmentMode="alignMargins"
        android:layout_width="match_parent"
        android:layout_height="match_parent">





        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="6dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="end|center_vertical"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Postgraduate"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="30dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="Undergraduate"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:textSize="12sp" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/consult_red"
                        android:layout_marginBottom="10dp"
                        />

                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <ImageView
            android:layout_marginTop="20dp"
            android:layout_height="180dp"
            android:layout_width="match_parent"
            android:src="@drawable/uni_image"
            android:scaleType="fitXY"/>




        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="6dp"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:layout_marginLeft="15dp"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:paddingLeft="7dp"
                    android:gravity="center_vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Search Courses at this University"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        />


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:paddingRight="7dp"
                    >


                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/right_arrow_img"
                        />

                </RelativeLayout>


            </LinearLayout>




        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="Visit University Website"
            android:textSize="12sp"
            android:textColor="#01289F"
            android:gravity="center_horizontal|center_vertical"
            />






        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="17dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="6dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Manarat International University"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/consult_red"
                    android:textSize="16sp"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="17dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="6dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:gravity="start"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="University Overview"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginEnd="48dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="#43121111"
                    />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/university_overview"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:lineSpacingMultiplier="1.2"
                        />

                </LinearLayout>




        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="17dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="6dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:gravity="start"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tuition Fees"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginEnd="48dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="#43121111"
                    />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/tuition_fees"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:lineSpacingMultiplier="1.3"
                        />

                </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="17dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="6dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:gravity="start"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Scholarships"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginEnd="48dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="#43121111"
                    />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/scholarship"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:lineSpacingMultiplier="1.2"
                        />

                </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="17dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="6dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:gravity="start"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Accommodation"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginEnd="48dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="#43121111"
                    />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/accommodation"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:lineSpacingMultiplier="1.2"
                        />

                </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="17dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="6dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:gravity="start"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="City Life"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginEnd="48dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="#43121111"
                    />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/city_life"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:lineSpacingMultiplier="1.2"
                        />

                </LinearLayout>

        </androidx.cardview.widget.CardView>










    </GridLayout>


</ScrollView>